istio/istio-cni/istio-example/gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-gateway
spec:
  hosts:
  - "*"
  gateways:
  - nginx-gateway
  http:
  - match:
    - uri:
        prefix: /v1
    rewrite:
      uri: "/"
    route:
    - destination:
        host: nginx
        subset: v1
        port:
          number: 80
  - route:
    - destination:
        host: nginx
        subset: v2
        port:
          number: 80
