istio/istio-cni/istio-example/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - nginx.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: nginx
        subset: v2
